# quiz_of_fury

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: manage.py
src/models/: deck.py  flashcard.py
src/quiz/: admin.py  apps.py  models.py  urls.py  views.py
src/quiz/management/commands/: create_sample_deck.py
src/quiz/migrations/: 0001_initial.py  0002_deck_owner_alter_flashcard_difficulty.py  0003_profile.py
src/quiz/models/: __init__.py  deck.py  flashcard.py  profile.py
src/quiz/services/: scheduler.py
src/quiz/static/css/: custom_styles.css  styles.css
src/quiz/tests/: test_scheduler.py
src/quiz_of_fury/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/: base.html
src/templates/account/: login.html  profile.html  signup.html
src/templates/quiz/: add_card.html  create_deck.html  deck_detail.html  index.html  landing.html  study_card.html
