[project]
name = "quiz_of_fury"
version = "0.1.0"
description = "Quiz of Fury"
authors = [
    {name = "Julia Rogers, Dan Seip, Daniel Terreros"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "httpie (>=3.2.4,<4.0.0)",
    "django-allauth (>=65.9.0,<66.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=45.0.5,<46.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"

